fix padding and width on mobile

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,8 @@ hr {
   .recipe {
     margin-block: 0;
     border-radius: 0;
-    padding: 0;
+    padding: 10px;
+    width: calc(100% - 10px);
   }
 
   .recipe__image {
